src/test/ui/type-alias-impl-trait/issue-60407.min_tait.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/issue-60407.rs:10:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

